# keyboard_detect

./: CMakeLists.txt
resource/: keys.qrc
src/: CMakeLists.txt  commonpanel.cpp  commonpanel.h  main.cpp  pal.cpp  pal.h  panelbase.cpp  panelbase.h
